<resources>
    <string name="app_name">Plannedly</string>

    <string name="default_notification_channel_id">plannedly_notification_channel_id</string>
    <string name="fcm_key">AAAADHSe490:APA91bFoGC_rYPMY-OeuL-5OvAAXBS3hANCoh0BHGNIedKXdsbbgLrXXF1lVTRfRYhGD1wKTdMCSVihwIH5niZH3qulQgQSBl4V9gUOdeGGWZ3HZarJ7mzxpPSqyL3hG57cDOJfeieDZ</string>

    <string name="card_name">Card name</string>
    <string name="description_card_details">Add a more detailed description…</string>
    <string name="select_label">Label</string>
    <string name="select_members">Members</string>
    <string name="select_start_date">Start date</string>
    <string name="select_due">Due date</string>
    <string name="update_card_details">UPDATE</string>
    <string name="create_board_name">Board Name</string>
    <string name="create_board_create">CREATE</string>
    <string name="lets_go">Lets Get Started</string>
    <string name="app_description">Collaborate and Plan Together Across Multiple Devices with Plannedly</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User name</string>
    <string name="nav_my_profile">My profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="my_profile_name">Name</string>
    <string name="my_profile_email">Email</string>
    <string name="my_profile_mobile">Mobile</string>
    <string name="my_profile_update">UPDATE</string>
    <string name="toolbar_sign_in">SIGN IN</string>
    <string name="sign_in_description">Enter your email and password to sign in.</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_page">SIGN IN</string>
    <string name="toolbar_sign_up">SIGN UP</string>
    <string name="sign_up_description">Enter your name, email and password to register with us.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_page">SIGN UP</string>
    <string name="no_boards">No Boards Available!</string>
    <string name="progress_dialog">Please wait…</string>
    <string name="please_press_back">Please press back once again to exit</string>
    <string name="please_enter_card_name">Please enter a card name</string>
    <string name="members_of_card">Members of the card</string>
    <string name="alert">Alert!</string>
    <string name="are_you_sure_you_want_delete">Are you sure you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_label_color">Select label color</string>
    <string name="denied_permission_storage">You just denied permission for storage.</string>
    <string name="can_allow_from_settings">You can allow it from the settings.</string>
    <string name="create_board">Create board</string>
    <string name="cancelled">Cancelled</string>
    <string name="invite_to_board">Invite to board</string>
    <string name="please_enter_email_address">Please enter email address</string>
    <string name="assigned_to_board">Assigned to the board</string>
    <string name="you_have_been_asigned_to_board">You have been assigned to the Board by</string>
    <string name="my_profile">My profile</string>
    <string name="nothing_as_been_updated">Nothing as been updated!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="registration_failed_try_again">Registration Failed. Try Again</string>
    <string name="you_have_successfully_registered">You have successfully registered</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="please_enter_email">Please enter an email</string>
    <string name="add_task_list">Add list</string>
    <string name="task_list_name">List name</string>
    <string name="task_list_title">Title</string>
    <string name="add_card">Add card</string>
    <string name="item_board_name">Board name</string>
    <string name="item_board_created_by">Created by</string>
    <string name="member_name">Member name</string>
    <string name="member_email">Email</string>
    <string name="members_name">Members names</string>
    <string name="dialog_title_add_member">Add a member</string>
    <string name="email_search_member">Email</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="dialog_title_select">Select</string>
    <string name="delete_card">Delete card</string>
    <string name="delete_board">Delete board</string>
    <string name="action_members">Members</string>
    <string name="board_created">Board created</string>
    <string name="board_deleted">Board deleted</string>
    <string name="tasklist_updated">TaskList updated</string>
    <string name="error_creating_board">Error while creating a board</string>
    <string name="profile_uptaded">Profile updated!</string>
    <string name="failed_updating_profile">Failed updating profile!</string>
    <string name="error_creating_members_list">Error while creating a List of members</string>
    <string name="no_such_member_found">No such member found</string>
    <string name="error_getting_user_details">Error while getting user details</string>
    <string name="please_enter_list_name">Please enter a list name</string>

    Please enter a list name
</resources>